--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@aws-cdk/aws-autoscaling": "^1.25.0",
     "@aws-cdk/aws-ec2": "^1.25.0",
     "@aws-cdk/aws-elasticloadbalancingv2": "^1.25.0",
+    "@aws-cdk/aws-iam": "^1.25.0",
     "@aws-cdk/core": "1.25.0",
+    "file-system": "^2.2.2",
     "source-map-support": "^0.5.16"
   }
 }
